[KAIZEN-0] legge til modiaflatefs med obo-flyt

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -75,6 +75,9 @@ spec:
         - application: beslutteroversikt
           namespace: obo
           cluster: prod-gcp
+        - application: modiaflatefs
+          namespace: personoversikt
+          cluster: prod-fss
   secureLogs:
     enabled: true
   env:
