Tillat å utstede OBO-tokens fra rekrutteringsbistand-container

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -90,6 +90,9 @@ spec:
         - application: modiapersonoversikt
           namespace: personoversikt
           cluster: prod-fss
+        - application: rekrutteringsbistand-container
+          namespace: toi
+          cluster: prod-gcp
   secureLogs:
     enabled: true
   env:
