--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -93,6 +93,9 @@ spec:
         - application: rekrutteringsbistand-container
           namespace: toi
           cluster: prod-gcp
+        - application: spinnsyn-frontend-interne
+          namespace: flex
+          cluster: prod-gcp
   secureLogs:
     enabled: true
   env:
