allow obo for sosialhjelp-modia-oidc-auth-proxy prod

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -108,6 +108,9 @@ spec:
         - application: syfooversikt
           namespace: teamsykefravr
           cluster: prod-fss
+        - application: sosialhjelp-modia-oidc-auth-proxy
+          namespace: teamdigisos
+          cluster: prod-fss
   secureLogs:
     enabled: true
   env:
