set azure allowAllUsers
Pga endring av deafult valus på dette feltet fra nais

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -57,6 +57,7 @@ spec:
     application:
       enabled: true
       tenant: nav.no
+      AllUsers: true
       claims:
         extra:
           - "NAVident"
