--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -58,6 +58,7 @@ spec:
   azure:
     application:
       enabled: true
+      AllUsers: true
       tenant: trygdeetaten.no
       claims:
         extra:
