--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -100,6 +100,9 @@ spec:
         - application: finnfastlege
           namespace: teamsykefravr
           cluster: prod-fss
+        - application: finnfastlege
+          namespace: teamsykefravr
+          cluster: prod-gcp
         - application: syfomodiaperson
           namespace: teamsykefravr
           cluster: prod-fss
