--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -102,6 +102,9 @@ spec:
         - application: finnfastlege
           namespace: teamsykefravr
           cluster: dev-fss
+        - application: finnfastlege
+          namespace: teamsykefravr
+          cluster: dev-gcp
         - application: syfomodiaperson
           namespace: teamsykefravr
           cluster: dev-fss
