--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -96,6 +96,9 @@ spec:
         - application: rekrutteringsbistand-container
           namespace: toi
           cluster: dev-gcp
+        - application: rekrutteringsbistand
+          namespace: toi
+          cluster: dev-gcp
         - application: spinnsyn-frontend-interne
           namespace: flex
           cluster: dev-gcp
