[KAIZEN-0] Legge til tilgang for ny arbeidssøkerregistrerings applikasjon

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -67,6 +67,9 @@ spec:
         - application: arbeidssokerregistrering-veileder
           namespace: paw
           cluster: prod-gcp
+        - application: arbeidssokerregistrering-for-veileder
+          cluster: prod-gcp
+          namespace: paw
         - application: veilarbpersonflate
           namespace: poao
           cluster: prod-gcp
