--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -69,6 +69,9 @@ spec:
         - application: arbeidssokerregistrering-veileder
           namespace: paw
           cluster: dev-gcp
+        - application: arbeidssokerregistrering-for-veileder
+          cluster: dev-gcp
+          namespace: paw
         - application: veilarbpersonflate
           namespace: poao
           cluster: dev-gcp
