[KAIZEN-0] unleash feature toggle

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -7,6 +7,8 @@ metadata:
   labels:
     team: personoversikt
 spec:
+  envFrom:
+    - secret: modiacontextholder-unleash-api-token
   image: "{{ image }}"
   port: 8080
   webproxy: true
@@ -62,6 +64,9 @@ spec:
         extra:
           - "NAVident"
   accessPolicy:
+    outbound:
+      external:
+        - host: personoversikt-unleash-api.nav.cloud.nais.io
     inbound:
       rules:
         - application: arbeidssokerregistrering-veileder
@@ -125,8 +130,6 @@ spec:
       value: "https://security-token-service.nais.adeo.no/rest/v1/sts/.well-known/openid-configuration"
     - name: AXSYS_REST_API_URL
       value: "https://axsys.nais.adeo.no"
-    - name: UNLEASH_API_URL
-      value: "https://unleash.nais.io/api/"
     - name: PDL_API_URL
       value: "https://pdl-api.nais.adeo.no/graphql"
     - name: NORG2_API_URL
@@ -157,3 +160,5 @@ spec:
       value: "modiacontextholder-redis.personoversikt.svc.nais.local"
     - name: SALESFORCE_URL
       value: "https://navdialog.lightning.force.com"
+    - name: UNLEASH_ENVIRONMENT
+      value: "production"
