--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,11 @@
             <artifactId>vavr</artifactId>
             <version>0.9.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.getunleash</groupId>
+            <artifactId>unleash-client-java</artifactId>
+            <version>8.3.1</version>
+        </dependency>
 
         <!--fellesbiblioteker-->
         <dependency>
