--- a/.github/workflows/unleash.yml
+++ b/.github/workflows/unleash.yml
@@ -10,9 +10,7 @@ jobs:
     name: Deploy unleash api token to dev-fss
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Deploy unleash api token
+      - uses: actions/checkout@v3
       - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
@@ -24,9 +22,7 @@ jobs:
     name: Deploy unleash api-token to prod-fss
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Deploy unleash api token
+      - uses: actions/checkout@v3
       - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
