--- a/.github/workflows/redis.yaml
+++ b/.github/workflows/redis.yaml
@@ -14,21 +14,22 @@ jobs:
   setup-redis:
     name: Setup Redis application
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - uses: actions/checkout@v3
       - name: Setup preprod
         if: github.ref == 'refs/heads/dev'
-        uses: nais/deploy/actions/deploy@v1
+        uses: nais/deploy/actions/deploy@v2
         env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           PRINT_PAYLOAD: true
           CLUSTER: dev-fss
           RESOURCE: .nais/redis.yaml
       - name: Setup prod
         if: github.ref == 'refs/heads/master'
-        uses: nais/deploy/actions/deploy@v1
+        uses: nais/deploy/actions/deploy@v2
         env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           PRINT_PAYLOAD: true
           CLUSTER: prod-fss
           RESOURCE: .nais/redis.yaml
