--- a/.github/workflows/unleash.yml
+++ b/.github/workflows/unleash.yml
@@ -9,11 +9,13 @@ jobs:
     if: github.ref == 'refs/heads/dev'
     name: Deploy unleash api token to dev-fss
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - uses: actions/checkout@v3
-      - uses: nais/deploy/actions/deploy@v1
+      - uses: nais/deploy/actions/deploy@v2
         env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-fss
           RESOURCE: .nais/unleash/unleash-apitoken-preprod.yaml
 
@@ -21,10 +23,12 @@ jobs:
     if: github.ref == 'refs/heads/master'
     name: Deploy unleash api-token to prod-fss
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - uses: actions/checkout@v3
-      - uses: nais/deploy/actions/deploy@v1
+      - uses: nais/deploy/actions/deploy@v2
         env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-fss
           RESOURCE: .nais/unleash/unleash-apitoken-prod.yaml
