[OPP-1580] Legge til endepunkt for å bytte fnr mot midlertidig kode
Legger til passordbeskyttelse på redis. Endepunkt som tillater å opprette en midlertidig kode for fnr. Denne koden kan brukes for å hente ut fnr igjen.

--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -9,6 +9,7 @@ metadata:
 spec:
   envFrom:
     - secret: modiacontextholder-unleash-api-token
+    - secret: modiacontextholder-redis-passord
   image: "{{ image }}"
   port: 8080
   webproxy: true
