--- a/.github/workflows/redis-med-passord.yaml
+++ b/.github/workflows/redis-med-passord.yaml
@@ -14,11 +14,14 @@ jobs:
   setup-redis:
     name: Setup Redis application
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - uses: actions/checkout@v3
       - name: Setup preprod
         if: github.ref == 'refs/heads/dev'
-        uses: nais/deploy/actions/deploy@v1
+        uses: nais/deploy/actions/deploy@v2
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           PRINT_PAYLOAD: true
@@ -26,7 +29,7 @@ jobs:
           RESOURCE: .nais/redis-med-passord.yaml
       - name: Setup prod
         if: github.ref == 'refs/heads/master'
-        uses: nais/deploy/actions/deploy@v1
+        uses: nais/deploy/actions/deploy@v2
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           PRINT_PAYLOAD: true
