--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <java.version>11</java.version>
         <common.version>2.2022.04.01_08.27-cbfeb0be0ee0</common.version>
         <graphql-kotlin.version>7.0.2</graphql-kotlin.version>
-        <kotlin.version>1.9.22</kotlin.version>
+        <kotlin.version>1.9.23</kotlin.version>
     </properties>
 
     <dependencyManagement>
@@ -65,7 +65,7 @@
             </dependency>
             <dependency>
                 <groupId>com.expediagroup</groupId>
-                <artifactId>graphql-kotlin-client</artifactId>
+                <artifactId>graphql-kotlin-ktor-client</artifactId>
                 <version>${graphql-kotlin.version}</version>
             </dependency>
         </dependencies>
@@ -144,10 +144,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -232,7 +228,18 @@
         </dependency>
         <dependency>
             <groupId>com.expediagroup</groupId>
-            <artifactId>graphql-kotlin-client</artifactId>
+            <artifactId>graphql-kotlin-ktor-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
+            <version>2.16.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.ktor</groupId>
+            <artifactId>ktor-client-mock-jvm</artifactId>
+            <version>2.3.9</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -251,7 +258,6 @@
                         </goals>
                         <configuration>
                             <endpoint>https://navikt.github.io/pdl/pdl-api-sdl.graphqls</endpoint>
-                            <outputDirectory>src/main/resources/pdl</outputDirectory>
                         </configuration>
                     </execution>
                     <execution>
@@ -263,20 +269,23 @@
                             <schemaFile>src/main/resources/pdl/schema.graphql</schemaFile>
                             <packageName>no.nav.sbl.consumers.pdl.generated</packageName>
                             <queryFileDirectory>src/main/resources/pdl/queries</queryFileDirectory>
-                            <converters>
-                                <Long>
+                            <customScalars>
+                                <customScalar>
+                                    <scalar>Long</scalar>
                                     <type>kotlin.Long</type>
                                     <converter>no.nav.sbl.dialogarena.modiabrukerdialog.api.utils.graphqlscalars.LongScalarConverter</converter>
-                                </Long>
-                                <Date>
-                                    <type>java.time.LocalDate</type>
-                                    <converter>no.nav.sbl.dialogarena.modiabrukerdialog.api.utils.graphqlscalars.DateScalarConverter</converter>
-                                </Date>
-                                <DateTime>
+                                </customScalar>
+                                <customScalar>
+                                    <scalar>DateTime</scalar>
                                     <type>java.time.LocalDateTime</type>
                                     <converter>no.nav.sbl.dialogarena.modiabrukerdialog.api.utils.graphqlscalars.DateTimeScalarConverter</converter>
-                                </DateTime>
-                            </converters>
+                                </customScalar>
+                                <customScalar>
+                                    <scalar>Date</scalar>
+                                    <type>java.time.LocalDate</type>
+                                    <converter>no.nav.sbl.dialogarena.modiabrukerdialog.api.utils.graphqlscalars.DateScalarConverter</converter>
+                                </customScalar>
+                            </customScalars>
                         </configuration>
                     </execution>
                 </executions>
