--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 spring.main.banner-mode=off
 server.servlet.context-path=/modiacontextholder
 
-# Default 8KB, men ser tilfeller av at dette feiler i produksjon med feilmeldingen "Request header is too large"
-server.max-http-header-size=16KB
-
 management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
 management.endpoints.web.base-path=/internal
 management.endpoints.web.exposure.include=prometheus
-management.metrics.export.prometheus.enabled=true
+management.prometheus.metrics.export.enabled=true
