Tilgang for speil (PO helse)

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -123,6 +123,9 @@ spec:
         - application: sosialhjelp-modia-oidc-auth-proxy
           namespace: teamdigisos
           cluster: prod-fss
+        - application: speil
+          namespace: tbd
+          cluster: prod-gcp
   secureLogs:
     enabled: true
   env:
