--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -121,9 +121,9 @@ spec:
     - name: AXSYS_SCOPE
       value: "dev-fss:org:axsys"
     - name: PDL_API_URL
-      value: "https://pdl-api-q1.dev.intern.nav.no/graphql"
+      value: "https://pdl-api.dev.intern.nav.no/graphql"
     - name: PDL_SCOPE
-      value: "dev-fss:pdl:pdl-api-q1"
+      value: "dev-fss:pdl:pdl-api"
     - name: NORG2_API_URL
       value: "https://norg2.dev.intern.nav.no"
     - name: NOM_URL
