--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -12,7 +12,6 @@ spec:
     - secret: modiacontextholder-redis-passord
   image: "{{ image }}"
   port: 8080
-  webproxy: true
   liveness:
     path: modiacontextholder/internal/isAlive
     initialDelay: 50
@@ -34,33 +33,16 @@ spec:
       cpu: 400m
       memory: 768Mi
   ingresses:
-    - https://modiacontextholder.prod-fss-pub.nais.io/modiacontextholder
-    - https://modiacontextholder.intern.nav.no/modiacontextholder
-    - https://modiacontextholder.nais.adeo.no/modiacontextholder
-    - https://modapp.adeo.no/modiacontextholder
-    - https://app.adeo.no/modiacontextholder
+    - https://modiacontextholder.dev.intern.nav.no/modiacontextholder
   replicas:
     min: 2
     max: 4
     cpuThresholdPercentage: 50
-  vault:
-    enabled: true
-    paths:
-      - kvPath: /serviceuser/data/prod/srvmodiacontextholder
-        mountPath: /var/run/secrets/nais.io/service_user
-      - kvPath: /serviceuser/data/prod/srvssolinux
-        mountPath: /var/run/secrets/nais.io/srvssolinux
-      - kvPath: /oracle/data/prod/creds/modiacontextholder-user
-        mountPath: /var/run/secrets/nais.io/modiacontextholderDB
-      - kvPath: /oracle/data/prod/config/modiacontextholder
-        mountPath: /var/run/secrets/nais.io/db_config
-      - kvPath: /apikey/appdynamics/prod
-        mountPath: /var/run/secrets/nais.io/vault
   azure:
     application:
       enabled: true
-      tenant: nav.no
       allowAllUsers: true
+      tenant: trygdeetaten.no
       claims:
         extra:
           - "NAVident"
@@ -72,97 +54,94 @@ spec:
       rules:
         - application: arbeidssokerregistrering-veileder
           namespace: paw
-          cluster: prod-gcp
+          cluster: dev-gcp
         - application: arbeidssokerregistrering-for-veileder
-          cluster: prod-gcp
+          cluster: dev-gcp
           namespace: paw
         - application: veilarbpersonflate
           namespace: poao
-          cluster: prod-gcp
+          cluster: dev-gcp
         - application: veilarbportefoljeflatefs
           namespace: obo
-          cluster: prod-gcp
+          cluster: dev-gcp
         - application: beslutteroversikt
           namespace: obo
-          cluster: prod-gcp
+          cluster: dev-gcp
         - application: smregistrering
           namespace: teamsykmelding
-          cluster: prod-gcp
+          cluster: dev-gcp
         - application: syfosmmanuell
           namespace: teamsykmelding
-          cluster: prod-gcp
+          cluster: dev-gcp
         - application: syk-dig
           namespace: teamsykmelding
-          cluster: prod-gcp
-        - application: modiaflatefs
+          cluster: dev-gcp
+        - application: modiaflatefs-{{ namespace }}
           namespace: personoversikt
-          cluster: prod-fss
+          cluster: dev-fss
         - application: modiapersonoversikt
           namespace: personoversikt
-          cluster: prod-fss
+          cluster: dev-gcp
+        - application: modiapersonoversikt-{{ namespace }}
+          namespace: personoversikt
+          cluster: dev-fss
         - application: rekrutteringsbistand-container
           namespace: toi
-          cluster: prod-gcp
+          cluster: dev-gcp
         - application: rekrutteringsbistand
           namespace: toi
-          cluster: prod-gcp
+          cluster: dev-gcp
         - application: spinnsyn-frontend-interne
           namespace: flex
-          cluster: prod-gcp
+          cluster: dev-gcp
         - application: finnfastlege
           namespace: teamsykefravr
-          cluster: prod-gcp
+          cluster: dev-gcp
         - application: syfomodiaperson
           namespace: teamsykefravr
-          cluster: prod-gcp
+          cluster: dev-gcp
         - application: syfomoteoversikt
           namespace: teamsykefravr
-          cluster: prod-gcp
+          cluster: dev-gcp
         - application: syfooversikt
           namespace: teamsykefravr
-          cluster: prod-gcp
+          cluster: dev-gcp
         - application: sosialhjelp-modia-oidc-auth-proxy
           namespace: teamdigisos
-          cluster: prod-fss
+          cluster: dev-fss
         - application: speil
           namespace: tbd
-          cluster: prod-gcp
+          cluster: dev-gcp
   secureLogs:
     enabled: true
   env:
     - name: AXSYS_URL
-      value: "https://axsys.intern.nav.no"
+      value: "https://axsys.dev.intern.nav.no"
     - name: AXSYS_SCOPE
-      value: "prod-fss:org:axsys"
+      value: "dev-fss:org:axsys"
     - name: PDL_API_URL
-      value: "https://pdl-api.intern.nav.no/graphql"
+      value: "https://pdl-api.dev.intern.nav.no/graphql"
     - name: PDL_SCOPE
-      value: "prod-fss:pdl:pdl-api"
+      value: "dev-fss:pdl:pdl-api"
     - name: NORG2_API_URL
-      value: "https://app.adeo.no/norg2"
+      value: "https://norg2.dev.intern.nav.no"
     - name: NOM_URL
-      value: "https://nom-api.intern.nav.no"
+      value: "https://nom-api.intern.dev.nav.no"
     - name: NOM_SCOPE
-      value: "prod-gcp:nom:nom-api"
+      value: "dev-gcp:nom:nom-api"
     - name: MS_GRAPH_URL
       value: "https://graph.microsoft.com/"
     - name: MS_GRAPH_SCOPE
       value: "https://graph.microsoft.com/.default"
-    - name: LOGINSERVICE_OIDC_DISCOVERYURI
-      value: "https://login.microsoftonline.com/navno.onmicrosoft.com/.well-known/openid-configuration"
-    - name: AAD_V2_DISCOVERURI
-      value: "https://login.microsoftonline.com/62366534-1ec3-4962-8869-9b5535279d0b/v2.0/.well-known/openid-configuration"
-    - name: LOGINSERVICE_OIDC_CLIENTID
-      value: "9b4e07a3-4f4c-4bab-b866-87f62dff480d"
     - name: APP_ENVIRONMENT_NAME
-      value: "p"
+      value: "{{ namespace }}"
     - name: AAREG_URL
-      value: "https://arbeid-og-inntekt.nais.adeo.no"
+      value: "https://arbeid-og-inntekt-q1.dev.adeo.no"
     - name: REDIS_PORT
       value: "6379"
     - name: REDIS_HOST
       value: "modiacontextholder-redis-med-passord.personoversikt.svc.nais.local"
     - name: SALESFORCE_URL
-      value: "https://navdialog.lightning.force.com"
+      value: "https://navdialog--sit2.lightning.force.com"
     - name: UNLEASH_ENVIRONMENT
-      value: "production"
+      value: "development"
