--- a/.github/workflows/redis-med-passord.yaml
+++ b/.github/workflows/redis-med-passord.yaml
@@ -35,3 +35,19 @@ jobs:
           PRINT_PAYLOAD: true
           CLUSTER: prod-fss
           RESOURCE: .nais/redis-med-passord.yaml
+      - name: Setup dev gcp
+        if: github.ref == 'refs/heads/dev'
+        uses: nais/deploy/actions/deploy@v2
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          PRINT_PAYLOAD: true
+          CLUSTER: dev-gcp
+          RESOURCE: .nais/redis-med-passord.yaml
+      - name: Setup prod gcp
+        if: github.ref == 'refs/heads/master'
+        uses: nais/deploy/actions/deploy@v2
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          PRINT_PAYLOAD: true
+          CLUSTER: prod-gcp
+          RESOURCE: .nais/redis-med-passord.yaml
