--- a/.github/workflows/unleash.yml
+++ b/.github/workflows/unleash.yml
@@ -32,3 +32,31 @@ jobs:
         env:
           CLUSTER: prod-fss
           RESOURCE: .nais/unleash/unleash-apitoken-prod.yaml
+
+  deploy-unleash-api-token-to-dev-gcp:
+    if: github.ref == 'refs/heads/dev'
+    name: Deploy unleash api token to dev-gcp
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: nais/deploy/actions/deploy@v2
+        env:
+          CLUSTER: dev-gcp
+          RESOURCE: .nais/unleash/unleash-apitoken-preprod.yaml
+
+  deploy-unleash-api-token-to-prod-gcp:
+    if: github.ref == 'refs/heads/master'
+    name: Deploy unleash api-token to prod-gcp
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: nais/deploy/actions/deploy@v2
+        env:
+          CLUSTER: prod-gcp
+          RESOURCE: .nais/unleash/unleash-apitoken-prod.yaml
