--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <kotlin.version>1.9.23</kotlin.version>
         <serialization.version>1.6.2</serialization.version>
         <coroutines.version>1.3.9</coroutines.version>
+        <modia-common-utils.version>1.2024.04.10-14.01-f285b3119abf</modia-common-utils.version>
     </properties>
 
     <repositories>
@@ -101,6 +102,11 @@
         </dependency>
 
         <!--fellesbiblioteker-->
+        <dependency>
+            <groupId>com.github.navikt.modia-common-utils</groupId>
+            <artifactId>logging</artifactId>
+            <version>${modia-common-utils.version}</version>
+        </dependency>
         <dependency>
             <groupId>no.nav.common</groupId>
             <artifactId>util</artifactId>
