--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -55,6 +55,9 @@ spec:
     outbound:
       external:
         - host: personoversikt-unleash-api.nav.cloud.nais.io
+        - host: axsys.dev-fss-pub.nais.io
+        - host: pdl-api.dev-fss-pub.nais.io
+        - host: norg2.dev-fss-pub.nais.io
     inbound:
       rules:
         - application: arbeidssokerregistrering-veileder
@@ -121,15 +124,15 @@ spec:
     enabled: true
   env:
     - name: AXSYS_URL
-      value: "https://axsys.dev.intern.nav.no"
+      value: "https://axsys.dev-fss-pub.nais.io"
     - name: AXSYS_SCOPE
       value: "dev-fss:org:axsys"
     - name: PDL_API_URL
-      value: "https://pdl-api.dev.intern.nav.no/graphql"
+      value: "https://pdl-api.dev-fss-pub.nais.io/graphql"
     - name: PDL_SCOPE
       value: "dev-fss:pdl:pdl-api"
     - name: NORG2_API_URL
-      value: "https://norg2.dev.intern.nav.no"
+      value: "https://norg2.dev-fss-pub.nais.io/norg2"
     - name: NORG2_SCOPE
       value: "dev-fss:org:norg2"
     - name: NOM_URL
