--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
             <artifactId>flyway-database-postgresql</artifactId>
             <version>10.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-oracle</artifactId>
+            <version>10.12.0</version>
+        </dependency>
 
         <dependency>
             <groupId>com.h2database</groupId>
