--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -55,6 +55,8 @@ spec:
         - host: axsys.dev-fss-pub.nais.io
         - host: pdl-api.dev-fss-pub.nais.io
         - host: norg2.dev-fss-pub.nais.io
+      rules:
+        - application: modiacontextholder-redis-med-passord
     inbound:
       rules:
         - application: arbeidssokerregistrering-veileder
