--- a/.nais/redis-med-passord.yaml
+++ b/.nais/redis-med-passord.yaml
@@ -10,6 +10,10 @@ metadata:
   name: modiacontextholder-redis-med-passord
   namespace: personoversikt
 spec:
+  accessPolicy:
+    inbound:
+      rules:
+        - application: modiacontextholder
   image: bitnami/redis:7.2.4
   port: 6379
   replicas: # A single Redis-app doesn't scale
