--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -148,7 +148,7 @@ spec:
     - name: APP_ENVIRONMENT_NAME
       value: "{{ namespace }}"
     - name: AAREG_URL
-      value: "https://arbeid-og-inntekt-q1.dev.adeo.no"
+      value: "https://arbeid-og-inntekt-q2.dev-fss-pub.nais.io"
     - name: REDIS_PORT
       value: "6379"
     - name: REDIS_HOST
