--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.main.banner-mode=off
+spring.flyway.enabled=false
 server.servlet.context-path=/modiacontextholder
 
 management.endpoint.metrics.enabled=true
