--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -100,7 +100,7 @@ spec:
         - application: modiapersonoversikt
           namespace: personoversikt
           cluster: prod-fss
-        - application: rekrutteringsbistand-kandidatsok-api
+        - application: rekrutteringsbistand-container
           namespace: toi
           cluster: prod-gcp
         - application: rekrutteringsbistand
@@ -130,26 +130,26 @@ spec:
   secureLogs:
     enabled: true
   env:
-    - name: AXSYS_URL
-      value: "https://axsys.intern.nav.no"
-    - name: AXSYS_SCOPE
-      value: "prod-fss:org:axsys"
+    - name: SECURITY_TOKEN_SERVICE_DISCOVERY_URL
+      value: "https://security-token-service.nais.adeo.no/rest/v1/sts/.well-known/openid-configuration"
+    - name: AXSYS_REST_API_URL
+      value: "https://axsys.nais.adeo.no"
     - name: PDL_API_URL
-      value: "https://pdl-api.intern.nav.no/graphql"
-    - name: PDL_SCOPE
-      value: "prod-fss:pdl:pdl-api"
+      value: "https://pdl-api.nais.adeo.no/graphql"
     - name: NORG2_API_URL
       value: "https://app.adeo.no/norg2"
-    - name: NORG2_SCOPE
-      value: "prod-fss:org:norg2"
-    - name: NOM_URL
-      value: "https://nom-api.intern.nav.no"
-    - name: NOM_SCOPE
-      value: "prod-gcp:nom:nom-api"
-    - name: MS_GRAPH_URL
-      value: "https://graph.microsoft.com/"
-    - name: MS_GRAPH_SCOPE
-      value: "https://graph.microsoft.com/.default"
+    - name: LDAP_BASEDN
+      value: "dc=adeo,dc=no"
+    - name: LDAP_URL
+      value: "ldaps://ldapgw.adeo.no"
+    - name: LDAP_USER_BASEDN
+      value: "ou=NAV,ou=BusinessUnits,dc=adeo,dc=no"
+    - name: LDAP_SERVICEUSER_BASEDN
+      value: "ou=ServiceAccounts,dc=adeo,dc=no"
+    - name: LDAP_DOMAIN
+      value: "ADEO.NO"
+    - name: MS_GRAPH_CLIENT_URL
+      value: "https://graph.microsoft.com/v1.0"
     - name: LOGINSERVICE_OIDC_DISCOVERYURI
       value: "https://login.microsoftonline.com/navno.onmicrosoft.com/.well-known/openid-configuration"
     - name: AAD_V2_DISCOVERURI
