Tillat prod-gcp modiapersonoversikt

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -111,6 +111,9 @@ spec:
         - application: modiapersonoversikt
           namespace: personoversikt
           cluster: prod-fss
+        - application: modiapersonoversikt
+          namespace: personoversikt
+          cluster: prod-gcp
         - application: rekrutteringsbistand-kandidatsok-api
           namespace: toi
           cluster: prod-gcp
