--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -79,6 +79,9 @@ spec:
         - application: norg2
           namespace: org
           cluster: prod-fss
+        - application: modiacontextholder
+          namespace: personoversikt
+          cluster: prod-gcp
     inbound:
       rules:
         - application: arbeidssokerregistrering-veileder
@@ -179,3 +182,5 @@ spec:
       value: "https://navdialog.lightning.force.com"
     - name: UNLEASH_ENVIRONMENT
       value: "production"
+    - name: MODIACONTEXTHOLDER_PROXY_API_URL
+      value: "https://modiacontextholder.intern.nav.no/modiacontextholder"
