Henter OBO token før proxy

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -184,3 +184,5 @@ spec:
       value: "production"
     - name: MODIACONTEXTHOLDER_PROXY_API_URL
       value: "https://modiacontextholder.intern.nav.no/modiacontextholder"
+    - name: MODIACONTEXTHOLDER_PROXY_API_SCOPE
+      value: "prod-gcp:modiacontextholder:modiacontextholder"
