Proxy til gcp (#294)
* Rename .java to .kt

* Konverter Unleash til Kotlin

* Rename .java to .kt

* Konverter ApplicationConfig til Kotlin

* Slett ubrukt klasse

* Rename .java to .kt

* EventDAO til Kotlin

* Legg til proxy for context i ContextService

* Rename .java to .kt

* ContextServiceTest til Kotlin

* Rename .java to .kt

* Test ContextRessurs i FSS og GCP context

* UnleashService -> ToggleableFeatureService

* Bruk kun 1 feature flagg

* Rename .java to .kt

* Fjern ubrukt id fra redismelding

* Implementer ModiaContextHolderClient

* Legg til miljøvariabel og sett opp access policy

* Henter OBO token før proxy

--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -159,3 +159,8 @@ spec:
       value: "modiacontextholder-db"
     - name: UNLEASH_ENVIRONMENT
       value: "development"
+    # MODIACONTEXTHOLDER_PROXY_* er ikke brukt i GCP
+    - name: MODIACONTEXTHOLDER_PROXY_API_URL
+      value: "https://modiacontextholder.intern.dev.nav.no/modiacontextholder"
+    - name: MODIACONTEXTHOLDER_PROXY_API_SCOPE
+      value: "dev-gcp:modiacontextholder:modiacontextholder"
