--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -163,4 +163,4 @@ spec:
     - name: MODIACONTEXTHOLDER_PROXY_API_URL
       value: "https://modiacontextholder.intern.dev.nav.no/modiacontextholder"
     - name: MODIACONTEXTHOLDER_PROXY_API_SCOPE
-      value: "dev-gcp:modiacontextholder:modiacontextholder"
+      value: "dev-gcp:personoversikt:modiacontextholder"
