Proxy to gcp (#295)
* Proxy til gcp (#294)

* Rename .java to .kt

* Konverter Unleash til Kotlin

* Rename .java to .kt

* Konverter ApplicationConfig til Kotlin

* Slett ubrukt klasse

* Rename .java to .kt

* EventDAO til Kotlin

* Legg til proxy for context i ContextService

* Rename .java to .kt

* ContextServiceTest til Kotlin

* Rename .java to .kt

* Test ContextRessurs i FSS og GCP context

* UnleashService -> ToggleableFeatureService

* Bruk kun 1 feature flagg

* Rename .java to .kt

* Fjern ubrukt id fra redismelding

* Implementer ModiaContextHolderClient

* Legg til miljøvariabel og sett opp access policy

* Henter OBO token før proxy

* Fiks config

* Fiks inbound access policy

* Fiks inbound access policy

* Log cluster name

* Pakk enum inn i bønne

* Logg cluster name

* Open

* Val

* Rename .java to .kt

* DatabaseConfig til Kotlin

* Fjern Autowired

* Gjør ApplicationCluster statisk

* Gjør ApplicationCluster statisk

* Fiks test

* Qualify all the things

--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -119,6 +119,12 @@ spec:
         - application: speil
           namespace: tbd
           cluster: dev-gcp
+        - application: modiacontextholder-q1
+          namespace: personoversikt
+          cluster: dev-fss
+        - application: modiacontextholder-q2
+          namespace: personoversikt
+          cluster: dev-fss
   secureLogs:
     enabled: true
   envFrom:
@@ -159,3 +165,8 @@ spec:
       value: "modiacontextholder-db"
     - name: UNLEASH_ENVIRONMENT
       value: "development"
+    # MODIACONTEXTHOLDER_PROXY_* er ikke brukt i GCP
+    - name: MODIACONTEXTHOLDER_PROXY_API_URL
+      value: "https://modiacontextholder.intern.dev.nav.no/modiacontextholder"
+    - name: MODIACONTEXTHOLDER_PROXY_API_SCOPE
+      value: "dev-gcp:personoversikt:modiacontextholder"
