--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -70,6 +70,10 @@ spec:
     outbound:
       external:
         - host: personoversikt-unleash-api.nav.cloud.nais.io
+      rules:
+        - application: modiacontextholder
+          namespace: personoversikt
+          cluster: dev-gcp
     inbound:
       rules:
         - application: arbeidssokerregistrering-veileder
@@ -170,3 +174,7 @@ spec:
       value: "https://navdialog--sit2.lightning.force.com"
     - name: UNLEASH_ENVIRONMENT
       value: "development"
+    - name: MODIACONTEXTHOLDER_PROXY_API_URL
+      value: "https://modiacontextholder.intern.dev.nav.no/modiacontextholder"
+    - name: MODIACONTEXTHOLDER_PROXY_API_SCOPE
+      value: "dev-gcp:personoversikt:modiacontextholder"
